new endpoints, tests, views added

--- a/HotelManagementDemo.Entities/HotelManagementDemo.Entities.csproj
+++ b/HotelManagementDemo.Entities/HotelManagementDemo.Entities.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\HotelManagementDemo.Core\HotelManagementDemo.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Concrete\Dtos\" />
+  </ItemGroup>
+
 </Project>
