--- a/HotelManagementDemo.WEBApi/appsettings.json
+++ b/HotelManagementDemo.WEBApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MySqlDb": {
+    "Connection": "server=localhost;port=3306;database=hotel_management_demo;uid=root;password="
+  }
 }
